@@ -107,10 +107,8 @@ public final class DataUtil {
 
         // look for BOM - overrides any other header or input
         BomCharset bomCharset = detectCharsetFromBom(firstBytes);
-        if (bomCharset != null) {
+        if (bomCharset != null)
             charsetName = bomCharset.charset;
-            input.skip(bomCharset.offset);
-        }
 
         if (charsetName == null) { // determine from meta. safe first parse as UTF-8
             String docData = Charset.forName(defaultCharset).decode(firstBytes).toString();
@@ -149,6 +147,8 @@ public final class DataUtil {
             if (charsetName == null)
                 charsetName = defaultCharset;
             BufferedReader reader = new BufferedReader(new InputStreamReader(input, charsetName), bufferSize);
+            if (bomCharset != null && bomCharset.offset) // creating the buffered reader ignores the input pos, so must skip here
+                reader.skip(1);
             try {
                 doc = parser.parseInput(reader, baseUri);
             } catch (UncheckedIOException e) {
@@ -248,12 +248,12 @@ public final class DataUtil {
         }
         if (bom[0] == 0x00 && bom[1] == 0x00 && bom[2] == (byte) 0xFE && bom[3] == (byte) 0xFF || // BE
             bom[0] == (byte) 0xFF && bom[1] == (byte) 0xFE && bom[2] == 0x00 && bom[3] == 0x00) { // LE
-            return new BomCharset("UTF-32", 0); // and I hope it's on your system
+            return new BomCharset("UTF-32", false); // and I hope it's on your system
         } else if (bom[0] == (byte) 0xFE && bom[1] == (byte) 0xFF || // BE
             bom[0] == (byte) 0xFF && bom[1] == (byte) 0xFE) {
-            return new BomCharset("UTF-16", 0); // in all Javas
+            return new BomCharset("UTF-16", false); // in all Javas
         } else if (bom[0] == (byte) 0xEF && bom[1] == (byte) 0xBB && bom[2] == (byte) 0xBF) {
-            return new BomCharset("UTF-8", 3); // in all Javas
+            return new BomCharset("UTF-8", true); // in all Javas
             // 16 and 32 decoders consume the BOM to determine be/le; utf-8 should be consumed here
         }
         return null;
@@ -261,9 +261,9 @@ public final class DataUtil {
 
     private static class BomCharset {
         private final String charset;
-        private final int offset;
+        private final boolean offset;
 
-        public BomCharset(String charset, int offset) {
+        public BomCharset(String charset, boolean offset) {
             this.charset = charset;
             this.offset = offset;
         }
