@@ -1168,4 +1168,14 @@ public class HtmlParserTest {
         assertEquals("One\nTwo", pre.text());
         assertEquals("\nOne\nTwo\n", pre.wholeText());
   }
+
+  @Test public void handlesXmlDeclAndCommentsBeforeDoctype() throws IOException {
+      File in = ParseTest.getFile("/htmltests/comments.html");
+      Document doc = Jsoup.parse(in, "UTF-8");
+
+      assertEquals("<!--?xml version=\"1.0\" encoding=\"utf-8\"?--> <!-- so --><!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 Transitional//EN\" \"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd\"> <!-- what --> <html xml:lang=\"en\" lang=\"en\" xmlns=\"http://www.w3.org/1999/xhtml\"> <!-- now --> <head> <!-- then --> <meta http-equiv=\"Content-type\" content=\"text/html; charset=utf-8\"> <title>A Certain Kind of Test</title> </head> <body> <h1>Hello</h1>h1&gt; (There is a UTF8 hidden BOM at the top of this file.) </body> </html>",
+          StringUtil.normaliseWhitespace(doc.html()));
+
+      assertEquals("A Certain Kind of Test", doc.head().select("title").text());
+  }
 }
