@@ -1,0 +1,10 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>OK</title>
+</head>
+<body>
+There is a UTF8 BOM at the top (before the XML decl). If not read correctly, will look like a non-joining space.
+</body>
+</html>
