@@ -1,0 +1,16 @@
+﻿
+<?xml version="1.0" encoding="utf-8"?>
+<!-- so -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<!-- what -->
+<html xml:lang="en" lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<!-- now -->
+<head>
+  <!-- then -->
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
+  <title>A Certain Kind of Test</title>
+</head>
+<body><h1>Hello</h1>h1></body>
+(There is a UTF8 hidden BOM at the top of this file.)
+</html>
