@@ -40,6 +40,10 @@ jsoup changelog
     of just returning an empty list.
     <https://github.com/jhy/jsoup/issues/1032>
 
+  * Bugfix: documents with a leading UTF-8 BOM did not have that BOM consumed, so it acted as a zero width no-break
+    space, which could impact the parse tree.
+    <https://github.com/jhy/jsoup/issues/1003>
+
 *** Release 1.11.2 [2017-Nov-19]
   * Improvement: added a new pseudo selector :matchText, which allows text nodes to match as if they were elements.
     This enables finding text that is only marked by a "br" tag, for example.
